Add display:block at items for that we can use the "a" tag html in items.

--- a/sddm-style.css
+++ b/sddm-style.css
@@ -57,6 +57,7 @@
 .item_sddm {
 	padding: 6px 10px;
 	white-space: nowrap; /* NOT CHANGE THAT */
+	display: block; /* NOT CHANGE THAT */
 }
 
 .item_sddm:hover {
